[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"              # <-- keep this at most recent version. the bug exists here?
tracing-appender = "0.2.3"      # <-- keep this at most recent version. the bug exists here?
tracing-subscriber = "0.3.19"   # <-- keep this at most recent version. the bug exists here?
tokio = { version = "1.44.1", features = ["full"] }