[package]
name = "hyper-util-dns-without-span"
version = "0.1.0"
edition = "2024"

[dependencies]
demo = { path = "../demo" }
reqwest = { version = "0.12.15" }

[patch.crates-io]
# TODO: replace this with `hyper-util` as normal, once PR goes through.
# for the time being, store local copy with change here
hyper-util = { path = "../patches/hyper-util-modified" }